# django-playground

./: .gitignore  dotenv-example  pyproject.toml
playground/: secrets.py  settings.py  urls.py
polls/: urls.py  views.py
polls/migrations/: 0001_initial.py
polls/templates/polls/: detail.html  index.html
